[package]
name = "peer_to_peer_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p     = { version = "0.39", features = ["tcp-tokio"]                                          }
serde      = { version = "1.0" , features = ["derive"]                                             }
serde_json =             "1.0"
tokio      = { version = "1.0" , features = ["io-std","io-util","macros","rt-multi-thread","sync"] }
